src/pages/room/Room.module.scss
@import "../../vars";

.room {
    display: flex;
    height: calc(100vh - $nav-height);
    max-width: 100%;
    overflow-x: hidden;
}

.game {
    flex: 3;
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: calc(100vw - 20rem);
}

.board {
    font-size: 1.5rem;
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    overflow-x: hidden;
}

.chat {
    background-color: #0004;
    width: 20rem;
    display: flex;
    flex-direction: column;
    .chatInput {
        margin-top: auto;
        input {
            width: 100%;
            background-color: #0004;
        }
    }

    .chatMessages {
        padding: 0 1rem;
        padding-top: 0.5rem;
        overflow-y: auto;
        word-break: break-all;
    }
}

